Javadoc for Services